[package]
name = "resonata"
version = "0.2.0"
authors = ["Jackson Griggs"]
edition = "2021"
readme = "README.md"
description = "A music theory library for Rust."
repository = "https://github.com/jacksongriggs/resonata"
keywords = ["music-theory", "harmony", "scales", "chords", "intervals"]
license = "MIT"

[dependencies]
lazy_static = "1.4.0"
regex = "1.9.4"
thiserror = "1.0.47"
